--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -143,22 +143,40 @@
     position: relative; /* Add position relative */
     height: 100%; /* Ensure the container has a height */
 }
+.about-div-bulleted {
+    padding: 10px;
+}
 .unordered-list-about {
     flex-direction: column;
     list-style-type: none;
     align-items: center;
-    text-align: center;
+    text-align: left;
     margin: 10px;
     padding: 10px;
     height: 90%;
-    width: 100%;
+    width: 84%;
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-    gap: 0px 30px;
+    gap: 0px 20px;
 }
 .unordered-list-about li {
-    padding: 10px 0px 10px 0px;
-    font-size: 0.5rem;
+    text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+    padding: 4px 0px 4px 0px;
+    font-size: 0.8rem;
+    
+	color: #333;
+	opacity: 0.4;
+    font-family: math;
+
+    color: black;
+   
+    letter-spacing: 0.1rem;
+   
+    text-shadow: 
+   
+
+   
+                   3px 2px 0px rgba(136, 136, 136, 0.6);
 }
 .unordered-list-about li img {
     max-width: 100px;
@@ -171,7 +189,7 @@
     display: flex;
     position: absolute;
     bottom: 0; /* Align to the bottom of the parent container */
-    width: 52%; /* Occupy the full width of the parent container */
+    width: 45%; /* Occupy the full width of the parent container */
     align-self: flex-start; /* Align to the top of its flex container */
 }
 @media (max-width: 1795px) {
@@ -185,7 +203,10 @@
         margin: 30px 30px 300px 30px; /* Add margin around the whole div */
     }
     #about-div-doctor-responsive {
-        width: 50%;
+        width: 45%;
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
     }
 }
 @media (max-width: 1450px) {
@@ -193,7 +214,7 @@
         width: 70%;
         position: relative;
         margin: 30px; /* Add margin around the whole div */
-        top: -85px;
+        top: -80px;
     }
     #about-div-doctor-responsive {
         width: 48%;    
@@ -213,9 +234,20 @@
         flex-direction: row;
     }
     .unordered-list-about-bring li {
-        font-size: 01rem;
         width: max-content; /* Adjust width to fit three items per row */
 
+    }
+    .unordered-list-about {
+        gap: 0px 20px;
+        padding: 0px;
+        margin: 0px;
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
+    }
+    .unordered-list-about li h3 {
+        line-height: 20px;
+        margin: 0px;
     }
 }
 @media (max-width: 1220px) {
@@ -226,16 +258,20 @@
     #about-div-doctor-responsive {
         width: 50%;    
     }
+    .unordered-list-about li h3 {
+        margin: 0px;
+    }
+
 }
 @media (max-width: 1120px) {
     .about-div-responsive {
         position: relative;
         width: 70%;
         margin: 30px 30px 300px 30px; /* Add margin around the whole div */
-        top: 10px;
+        top: -10px;
     }
     #about-div-doctor-responsive {
-        width: 50%;    
+        width: 75%;    
     }
     #about-div-image-responsive {
         display: flex;
@@ -269,6 +305,31 @@
     .about-div-bulleted-bring p {
         padding: 0px 7px 0px 7px;
         font-size: 0.8rem;
+    }
+    .about-div-bulleted {
+        padding: 10px 10px 20px 10px;
+    }
+    .unordered-list-about {
+        gap: 2px 2px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
+        padding: 0px;
+        margin: 0px;
+    }
+    .unordered-list-about li h3 {
+        margin: 0px;
+        line-height: 30px;
+    }
+}
+@media (max-width: 1120px) and (max-height: 800px) {
+    #about-div-doctor-responsive {
+        width: 65%;    
+    }
+    .unordered-list-about li h3 {
+        margin: 0px;
+        line-height: 25px;
     }
 }
 @media (max-width: 1015px) {
@@ -382,7 +443,11 @@
         font-size: 1.1rem;
         padding: 0px 10px 0px 10px;
         width: max-content; /* Adjust width to fit three items per row */
-
+    }
+    .unordered-list-about li {
+        font-size: 1rem;
+        padding: 0px;
+        margin: 0px;
     }
 }
 @media (max-width: 815px) {
@@ -434,6 +499,13 @@
         width: max-content; /* Adjust width to fit three items per row */
 
     }
+    
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.9rem;
+    }
 }
 @media (max-width: 740px) {
     #about-div-doctor-responsive {
@@ -475,15 +547,20 @@
         width: max-content; /* Adjust width to fit three items per row */
 
     }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.9rem;
+    }
 }
 @media (max-width: 690px) {
     #about-div-doctor-responsive {
-        top: -75px;
+        top: -71px;
     }
     .about-parent-div {
         flex-direction: column;
     }
-
     .about-div-bulleted-bring p {
         font-size: 1.2rem;
         text-align: center;
@@ -520,6 +597,17 @@
         width: max-content; /* Adjust width to fit three items per row */
 
     }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.8rem;
+    }
+}
+@media (max-width: 690px) and (min-height: 410px) {
+    #about-div-doctor-responsive {
+        top: -74px;
+    }
 }
 @media screen and (max-width: 501px) {
     #about-div-doctor-responsive {
@@ -541,7 +629,6 @@
     .about-parent-div {
         flex-direction: column;
     }
-
     .about-div-bulleted p {
         font-size: 1rem;
     }
@@ -574,6 +661,12 @@
         padding: 0px 10px 0px 10px;
         width: max-content; /* Adjust width to fit three items per row */
 
+    }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
     }
 }
 @media (max-width: 420px) {
@@ -616,6 +709,12 @@
         padding: 0px 10px 0px 10px;
         width: max-content; /* Adjust width to fit three items per row */
 
+    }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
     }
 }
 @media (max-width: 380px) {
@@ -661,6 +760,12 @@
         width: max-content; /* Adjust width to fit three items per row */
 
     }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.7rem;
+    }
 }
 @media (max-width: 350px) {
     .about-parent-div {
@@ -701,8 +806,13 @@
         width: max-content; /* Adjust width to fit three items per row */
 
     }
+    .unordered-list-about {
+        gap: 2px 2px;
+    }
+    .unordered-list-about li {
+        font-size: 0.6rem;
+    }
 }
-
 @media (max-width: 245px) {
     #about-div-doctor-responsive {
         top: 8px;
