--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     width: 100%;
     align-items: center;
+    flex: 1;
 
 }
 .about-div-responsive {
@@ -15,7 +16,7 @@
     box-shadow: 0 0 0 2px rgba(218, 102, 123, 1), 8px 8px 0 0 rgba(218, 102, 123, 1);
     position: sticky;
     top: 0;
-    margin-bottom: 300px;
+    margin-bottom: 100px;
 }
 .appointment-section {
     position: absolute;
@@ -46,6 +47,7 @@
     padding: 1.5rem;
     color: #fff;
 }
+
 .about-div-bulleted-bring .portal-button {
     display: flex;
     align-self: center;
@@ -261,6 +263,9 @@
     .unordered-list-about li h3 {
         margin: 0px;
     }
+    .about-div-bulleted-bring .portal-button {
+        font-size: 0.8rem;
+    }
 
 }
 @media (max-width: 1120px) {
@@ -448,6 +453,9 @@
         font-size: 1rem;
         padding: 0px;
         margin: 0px;
+    }
+    .about-div-bulleted-bring .portal-button {
+        font-size: 1rem;
     }
 }
 @media (max-width: 815px) {
